[package]
name = "cargo-brust64"
version = "0.1.0"
authors = ["david haioum <dav6983@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
base64 = "0.13.0"
tera = "1"