[package]
name = "cargo-brust64"
version = "0.1.4"
license = "MIT"
description = "cargo command to encode a bunch of static files into base64 and contained in a rust file as Hashmap"
authors = ["david haioum <dav6983@gmail.com>"]
edition = "2020"
repository = "https://github.com/WasmPot/cargo-brust64.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
base64 = "0.13.0"
image-base64-wasm = "0.3.0"
tera = "1"